--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -37,8 +37,26 @@ jobs:
           paths:
             - ~/.gradle
           key: v1-dependencies-{{ checksum "build.gradle" }}
+  deploy:
+    machine:
+      enabled: true
+    steps:
+      - add_ssh_keys:
+          fingerprints:
+            - $fingerprint
+      - run:
+          name: Deploy Over SSH
+          command: |
+            ssh $ssh_user@$ssh_host "cd test-firman && sudo sh ./deploy-test.sh"
 
-      # run tests!
-      - run: gradle test
-      - run: echo $test
-      - run: echo $fingerprint
+      workflows:
+        version: 2
+        build-and-deploy:
+          jobs:
+            - build
+            - deploy:
+                requires:
+                  - build # only deploy once build job has completed
+                filters:
+                  branches:
+                    only: master # only deploy on the master branch
