--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -38,19 +38,19 @@ jobs:
             - ~/.gradle
           key: v1-dependencies-{{ checksum "build.gradle" }}
       - run: docker login -u $docker_username -p $docker_password
-      - run: gradle jib --image=frmnjn/hello:latest
+      - run: gradle jib --image=frmnjn/hello
   deploy:
     machine:
       enabled: true
     steps:
       - add_ssh_keys:
           fingerprints:
-            - "$fingerprint"
-      #            - "c4:d3:2a:c3:f5:47:7f:06:a9:b1:a9:8e:30:a6:80:b0"
+            - $fingerprint
       - run:
           name: Deploy Over SSH
           command: |
-            ssh $ssh_user@$ssh_host "cd test-firman/gradle-spring-circleci && ./autopushdocker.sh"
+            #            args1 = docker_image, args2 = docker_container_name yang mau di run di server
+                     ssh $ssh_user@$ssh_host "cd test-firman/gradle-spring-circleci && ./deploy.sh frmnjn/hello hello"
 
 workflows:
   version: 2
