--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -23,7 +23,6 @@ jobs:
 
     steps:
       - checkout
-
       # Download and cache dependencies
       - restore_cache:
           keys:
@@ -37,29 +36,32 @@ jobs:
           paths:
             - ~/.gradle
           key: v1-dependencies-{{ checksum "build.gradle" }}
+      - run: gradle build -x test
+      - run: docker build -t frmnjn/hello .
       - run: docker login -u $docker_username -p $docker_password
-      - run: gradle jib --image=frmnjn/hello
-  deploy:
-    machine:
-      enabled: true
-    steps:
-      - add_ssh_keys:
-          fingerprints:
-            - $fingerprint
-      - run:
-          name: Deploy Over SSH
-          command: |
-            #            args1 = docker_image, args2 = docker_container_name yang mau di run di server
-                     ssh $ssh_user@$ssh_host "cd test-firman/gradle-spring-circleci && ./deploy.sh frmnjn/hello hello"
+      - run: docker push frmnjn/hello
+      # - run: gradle jib --image=frmnjn/cquran-webserver
+  # deploy:
+  #   machine:
+  #     enabled: true
+  #   steps:
+  #     - add_ssh_keys:
+  #         fingerprints:
+  #           - $fingerprint
+  #     - run:
+  #         name: Deploy Over SSH
+  #         command: |
+  #           # args1 = docker_image, args2 = docker_container_name yang mau di run di server
+  #           ssh $ssh_user@$ssh_host "./deploy.sh frmnjn/cquran-webserver cquran-webserver"
 
 workflows:
   version: 2
   build-and-deploy:
     jobs:
       - build
-      - deploy:
-          requires:
-            - build # only deploy once build job has completed
-          filters:
-            branches:
-              only: master # only deploy on the master branch
+      # - deploy:
+          # requires:
+            # - build # only deploy once build job has completed
+          # filters:
+            # branches:
+              # only: master # only deploy on the master branch
