--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -23,8 +23,7 @@ jobs:
 
     steps:
       - checkout
-      - setup_remote_docker:
-        docker_layer_caching: true
+      - setup_remote_docker
       # Download and cache dependencies
       - restore_cache:
           keys:
